<resources>
    <string name="app_name">EletricCarAppDio</string>
    <string name="title">Eletric Car</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="price">Preço</string>
    <string name="battery">Bateria</string>
    <string name="potency">Potência</string>
    <string name="recharge">Recarga</string>
    <string name="calculate">Calcular</string>
    <string name="calular_autonomia">Calcular autonomia</string>
    <string name="no_internet">Ops, não há conexão com a internet :(</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
</resources>