<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_star"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/thumbnail_height"
                android:src="@drawable/eletric_car"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_car"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/tv_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 300.000,00"
                app:layout_constraintTop_toBottomOf="@id/iv_car"
                app:layout_constraintLeft_toRightOf="@id/tv_price"
                android:layout_marginLeft="16dp"
                />

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/tv_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300 kWh"
                app:layout_constraintTop_toBottomOf="@id/tv_price_value"
                app:layout_constraintLeft_toRightOf="@id/tv_battery"
                android:layout_marginLeft="16dp"
                />

            <TextView
                android:id="@+id/tv_potency"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/potency"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_battery"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/tv_potency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300 cv"
                app:layout_constraintTop_toBottomOf="@id/tv_battery_value"
                app:layout_constraintLeft_toRightOf="@id/tv_potency"
                android:layout_marginStart="16dp"
                />

            <TextView
                android:id="@+id/tv_recharge"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_potency"
                app:layout_constraintLeft_toLeftOf="@id/tv_potency"
                />

            <TextView
                android:id="@+id/tv_recharge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23 min"
                app:layout_constraintTop_toBottomOf="@id/tv_potency_value"
                app:layout_constraintStart_toEndOf="@id/tv_recharge"
                android:layout_marginStart="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>